--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@radix-ui/themes": "^3.2.0",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
-    "next": "15.1.6",
+    "next": "^15.3.3",
+    "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-particles": "^2.12.2",
+    "react-s3": "^1.0.7",
     "tsparticles": "^3.8.1"
   },
   "devDependencies": {
