--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@radix-ui/themes": "^3.2.0",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
+    "framer": "^2.4.1",
+    "framer-motion": "^12.23.0",
     "next": "^15.3.3",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
